# capsule-capi-testing

./: CMakeLists.txt  README.md  pyproject.toml  somelib.cpp
